# grace

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
demo/: CMakeLists.txt
demo/assets/shaders/: main.frag  main.frag.spv  main.vert
demo/src/: demo.cpp  demo_setup.cpp  demo_setup.hpp
examples/: CMakeLists.txt
examples/base/: example.cpp  example.hpp
examples/base/shaders/: imgui.frag  imgui.frag.spv  imgui.vert  imgui.vert.spv
examples/imgui/: CMakeLists.txt  README.md  imgui_example.cpp  imgui_example.hpp
examples/triangle/: CMakeLists.txt  README.md  triangle_example.cpp  triangle_example.hpp
examples/triangle/shaders/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
examples/window/: CMakeLists.txt  window_example.cpp
include/grace/: allocator.hpp  buffer.hpp  command_pool.cpp  command_pool.hpp  common.hpp  context.hpp  debug.hpp  descriptor_pool.hpp  descriptor_set_layout.hpp  descriptors.hpp  device.hpp  fence.hpp  framebuffer.hpp  grace.hpp  image.hpp  image_view.hpp  instance.hpp  physical_device.hpp  pipeline.hpp  pipeline_cache.hpp  pipeline_layout.hpp  queue.hpp  render_pass.hpp  sampler.hpp  semaphore.hpp  shader_module.hpp  surface.hpp  swapchain.hpp  texture.hpp  version.hpp
include/grace/extras/: sdl.hpp  window.hpp
src/: CMakeLists.txt  allocator.cpp  buffer.cpp  command_pool.cpp  common.cpp  context.cpp  debug.cpp  descriptor_pool.cpp  descriptor_set_layout.cpp  descriptors.cpp  device.cpp  fence.cpp  framebuffer.cpp  image.cpp  image_view.cpp  instance.cpp  physical_device.cpp  pipeline.cpp  pipeline_cache.cpp  pipeline_layout.cpp  queue.cpp  render_pass.cpp  sampler.cpp  semaphore.cpp  shader_module.cpp  surface.cpp  swapchain.cpp  texture.cpp  version.cpp
src/extras/: sdl.cpp  window.cpp
tests/: CMakeLists.txt
tests/assets/shaders/: test.frag  test.vert  test.vert.spv
tests/src/: allocator_test.cpp  buffer_test.cpp  command_pool_test.cpp  common_test.cpp  descriptor_set_layout_test.cpp  descriptors_test.cpp  fence_test.cpp  instance_test.cpp  physical_device_test.cpp  pipeline_test.cpp  render_pass_test.cpp  semaphore_test.cpp  shader_module_test.cpp  surface_test.cpp  test_utils.cpp  test_utils.hpp  tests.cpp
